morpion/style.css
* {
  margin: 0;
  padding: 0;
}

body {
  background-color: rgb(101, 91, 77);
}

.red {
  background-color: rgba(113, 23, 23, 0.912);
}

/****************************************
 * barre de navigation 
 ****************************************/
#navBar {
  display: flex;
  flex-direction: column;
  position: absolute;
  right: 0;
  background-color: rgba(94, 11, 87, 0.76);
  border-left: inset 1px black;
  width: 20%;
  height: 100%;
}

.joueur {
  box-sizing: border-box;
  height: 50%;
  padding-left: 10%;
  overflow: auto;
}

.joueur:first-child {
  border-bottom: solid 1px black;
}

/*Nom joueur*/
.player1:first-child,
.player2:first-child {
  font-size: x-large;
  margin-top: 5%;
  margin-bottom: 5%;
  margin-left: -5%;
}

.avatar {
  position: relative;
  height: 15dvh;
  width: 15dvh;
  border-radius: 10px;
  border: solid 1px black;
}

.avatar:hover {
  transform: scale(1.1);
  transition: all 0.5s;
}
/*nom perso*/
.player1:nth-child(3),
.player2:nth-child(3) {
  font-size: larger;
}
/*Phrase perso*/
.player1:nth-child(6),
.player2:nth-child(6) {
  font-style: italic;
}

/****************************************
 * Weapper
 ****************************************/
#weapper {
  width: 80%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
}

h1 {
  padding: 3%;
  text-align: center;
}

.annonce {
  font-size: larger;
  text-align: center;
}

/****************************************
 * popup victoire
 ****************************************/
.isFinish {
  position: absolute;
  top: 5%;
  left: 50%;
  transform: translate(-50%, -5%);
  border: solid 1px rgb(20, 19, 19);
  background-color: #460707c3;
  backdrop-filter: blur(3px);
  box-shadow: 25px 25px 15px 5px #000000cc;
  border-radius: 5px;
  padding: 20px;
  z-index: 1;
  display: none;
  flex-direction: row;
  justify-items: center;
  align-items: start;
  min-width: 35%;
  max-width: 85%;
  white-space: nowrap;
  overflow: hidden;
}

#vic {
  font-size: x-large;
  padding: 5px;
  padding-left: 15px;
}

#namePerso {
  text-align: start;
  font-size: x-large;
  padding: 5px;
  padding-left: 10px;
}

/****************************************
 * grille
 ****************************************/
#grille {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  gap: none;
  background-color: antiquewhite;
  border: inset 1px black;
  box-shadow: 0px 0px 41px 15px rgba(0, 0, 0, 0.91),
    inset 0px 0px 50px -17px rgba(0, 0, 0, 0.91),
    0px -2px 50px 50px rgba(255, 61, 193, 0.49);
  height: 40dvh;
  width: 40dvh;
  position: absolute;
  top: 60%;
  left: 50%;
  transform: translate(-50%, -60%);
}

#grille div {
  border: solid 1px black;
}

.case {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: xx-large;
}

.pion {
  height: 80%;
  width: 80%;
  border: solid 1px black;
  border-radius: 50%;
}

.signe {
  position: absolute;
  opacity: 0;
  z-index: -1;
}

.pop img {
  animation: pulse 5s infinite;
}

.popReduce img {
  animation: reduce 5.5s ease;
}

/****************************************
 * popup selection perso
 ****************************************/
.popup {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 1;
}

.popup-content {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: solid 1px rgb(20, 19, 19);
  background-color: #460707c3;
  backdrop-filter: blur(3px);
  box-shadow: 25px 25px 15px 5px #000000cc;
  border-radius: 5px;
  padding: 20px;
  text-align: center;
}

h2 {
  padding-bottom: 20px;
}

#nom {
  padding: 5px;
  border: solid 1px black;
  border-radius: 5px;
}

select {
  padding: 5px;
  border: solid 1px black;
  border-radius: 5px;
}

select option {
  padding: 0;
  margin: 0;
  overflow: auto;
}

#soumettre {
  display: block;
}

#soumettre2 {
  display: none;
}

.btn {
  margin: auto;
  margin-top: 2%;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  font-size: 16px;
  cursor: pointer;
  transition: background-color 0.3s;
}

.btn:hover {
  background-color: #922828;
}

.btn:active {
  background-color: #6c1a1a;
}

/****************************************
 * taille entre 541px et 960px
 ****************************************/
@media screen and (max-width: 960px) {
  body,
  #weapper {
    width: 70%;
  }

  #navBar {
    width: 30%;
  }

  #nom {
    margin-bottom: 5px;
  }

  .isFinish {
    white-space: wrap;
    width: 80%;
  }
}

/****************************************
 * taille max 540px
 ****************************************/
@media screen and (max-width: 540px) {
  body {
    width: 100%;
  }

  #navBar {
    flex-direction: row;
    justify-content: space-around;
    right: none;
    bottom: 0;
    background-color: rgba(94, 11, 87, 0.76);
    border-left: none;
    border-top: solid 1px black;
    width: 100%;
    min-height: 30%;
    height: auto;
  }

  .joueur:first-child {
    border-bottom: none;
    border-right: solid 1px black;
  }

  .joueur {
    margin-left: 0%;
    height: 100%;
    width: 50%;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    height: auto;
  }

  /*nom joueur*/
  .player1:first-child,
  .player2:first-child {
    font-size: medium;
    margin-top: 5%;
    margin-bottom: 5%;
    margin-left: -5%;
  }

  .avatar {
    height: 10dvh;
    width: 10dvh;
  }

  /*nom personnage*/
  .player1:nth-child(3),
  .player2:nth-child(3) {
    font-size: medium;
    order: 2;
  }

  /*phrase*/
  .player1:nth-child(6),
  .player2:nth-child(6) {
    order: 3;
  }

  /*score*/
  .player1:nth-child(7),
  .player2:nth-child(7) {
    order: 1;
  }

  /*age et description */
  .player1:nth-child(n + 4):nth-child(-n + 5),
  .player2:nth-child(n + 4):nth-child(-n + 5) {
    display: none;
    height: 0px;
    width: 0px;
  }

  #weapper {
    width: 100%;
    height: 70%;
  }

  #namePerso,
  #vic {
    font-size: medium;
  }

  #grille {
    height: 30dvh;
    width: 30dvh;
  }
}

/****************************************
 * animation
 ****************************************/
@keyframes pulse {
  0% {
    transform: scale(1);
  }

  20% {
    transform: scale(0.9);
  }

  40% {
    transform: scale(1.4);
  }

  60% {
    transform: scale(1);
  }

  80% {
    transform: scale(1.4);
  }

  100% {
    transform: scale(1);
  }
}

@keyframes reduce {
  0% {
    transform: scale(1);
  }

  100% {
    transform: scale(0);
    opacity: 0;
  }
}
/************************************************************/

